--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@ body {
 .aligncenter {
   text-align: center;
 }
+/* navigation page*/
 .navL {
   width: 500px;
   margin: 100px auto;
@@ -14,4 +15,24 @@ body {
   font-size: 25px;
   margin: 30px;
   padding-left: 80px;
+}
+
+img {
+  width: 30%;
+}
+
+.description {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px;
+}
+.ingredients {
+  display: inline-block;
+  margin: 5px;
+  padding: 5px;
+}
+.steps {
+  display: inline-block;
+  margin: 5px;
+  padding: 5px;
 }
